	  where it seems to fit in better (2016-01-20).
	* apps/nshlib: Extend logins.  Added: Optional platform-specific
	  function to perform password verification and optional delay
	  after each failed login attempt (2016-01-22).
	* system/ramtron:  Removed completely.  It inappropriately used
	  an internal OS interface (up_spiinitialize), that has been
	  obsoleted.  That's what happens when you violate interface
	  boundaries between the application and the OS (2016-01-27).
	* apps/platform/Makefile:  Use a relative path to the board
	  directory link rather than the absolute path.  For Cygwin, the
	  absolute would would need converted with cygpath.  But just using
	  the relative path is a simpler solution (2016-01-27).

7.15 2016-xx-xx Gregory Nutt <gnutt@nuttx.org>

	* apps/exmaples/chat and apps/netutils/chat:  Contributed by
	  by Vladimir Komendantskiy (2019-01-29).
	* apps/examples/ubloxmodem:  app to control the power state of the
	  modem in nsh.  From  Vladimir Komendantskiy (2019-01-31).
	* apps/system/ubloxmodem:  Moved the modem application from
	  examples/ to system/ (2016-01-31).
	* apps/system/i2c:  The I2C tool now obeys it OS interfacing:
	  it now uses an I2C character driver to access the I2C bus
	  (2016-02-02).
	* apps/netutils/netlib:  Add utility functions to support accesses
	  to the ARP table (2016-02-08).
	* apps/netutils/dhcpd: DHCPD no longer calls directly into the
	  OS but uses the new network IOCTL commands to modify the ARP
	  table (2016-02-08).
	* apps/nshlib:  Add an 'arp' command that will support access to
	  the OS ARP table (2016-02-08).
	* apps/nshlib: 'ps' command will show CPU if SMP is enabled
	  (2016-02-19).
	* apps/examples/leds: An example to demonstrate use of LED
	  driver (2016-02-20).
	* apps/examples/smp:  An verifying SMP configurations (2016-02-21).
	* apps/examples/rgbled:  Example using the RGB LED driver to
	  drive an RGB LED via PWM.  From Alan Carvalho de Assis
	  (2016-02-23).
